test/integration/cli-args/sstanc.t/fail/03_protected_data_in_transformed_data.stan
// Compile with: stanc --sstanc --sstan-protect=y
data {
  real y;
}
transformed data {
  real y_copy;
  y_copy = y;
}
parameters {
  real mu;
}
model {
  mu ~ normal(0, 1);
  y ~ normal(mu, 1);
}
